# UnityChipForXiangShan

./: .gitignore  CONTRIBUTING.md  Makefile  README.en.md  README.md  README.zh.md  WayLookup_Agent_API_Documentation.md  __init__.py  a.sh  dir_map.f  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py
.bsp/: scala-cli.json
.github/: PULL_REQUEST_TEMPLATE.md
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-envs.json  ide-inputs.json
comm/: __init__.py  cfg.py  constants.py  export_dut.py  functions.py  logger.py  result.py
configs/: _default.yaml  ci.yaml  fastrun.yaml  frontend_trigger.yaml  fullrun.yaml  noskip.yaml
documents/: Makefile  README.en.md  README.md  README.zh.md  go.mod  go.sum  hugo.toml  package.json
dut/: FtqRedirectMem.fst  test_random.fst  test_redirect_mem.fst
rtl/: README.md
scripts/: Makefile.build_ut_backend_ctrlblock_decode  Makefile.build_ut_backend_decode  Makefile.build_ut_frontend_itlb  __init__.py  build_ut_backend_ctrl_block_decode.py  build_ut_backend_ctrl_block_rob.py  build_ut_backend_ctrlblock_decode.py  build_ut_backend_ctrlblock_rob.py  build_ut_frontend_bpu_ftb.py  build_ut_frontend_bpu_ittage.py  build_ut_frontend_bpu_ras.py  build_ut_frontend_bpu_tagesc.py  build_ut_frontend_bpu_top.py  build_ut_frontend_bpu_uftb.py  build_ut_frontend_ftb_entry_mem.py  build_ut_frontend_ftq_ftq_top.py  build_ut_frontend_ftq_meta_1r_sram.py  build_ut_frontend_ftq_pc_mem.py  build_ut_frontend_ftq_pd_mem.py  build_ut_frontend_ftq_redirect_mem.py  build_ut_frontend_ftq_top.py  build_ut_frontend_icache.py  (+42 more)
(+1028 files in other folders)
